; ModuleID = '/home/carl/AnghaBench/systemd/src/vconsole/extr_vconsole-setup.c_verify_vc_device.c'
source_filename = "/home/carl/AnghaBench/systemd/src/vconsole/extr_vconsole-setup.c_verify_vc_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TIOCL_GETFGCONSOLE = common dso_local global i8 0, align 1
@TIOCLINUX = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @verify_vc_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_vc_device(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [1 x i8], align 1
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = getelementptr inbounds [1 x i8], [1 x i8]* %4, i64 0, i64 0
  %7 = load i8, i8* @TIOCL_GETFGCONSOLE, align 1
  store i8 %7, i8* %6, align 1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @TIOCLINUX, align 4
  %10 = getelementptr inbounds [1 x i8], [1 x i8]* %4, i64 0, i64 0
  %11 = call i32 @ioctl(i32 %8, i32 %9, i8* %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load i32, i32* @errno, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %1
  %18 = load i32, i32* %5, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %14
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @ioctl(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
